--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/content": "^2.13.4",
-    "nuxt": "^3.14.159",
+    "@nuxt/content": "^3.11.0",
+    "better-sqlite3": "^12.6.2",
+    "nuxt": "^4.2.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^1.6.4"
+    "@nuxt/devtools": "^3.1.1"
   }
 }
