--- a/package.json
+++ b/package.json
@@ -12,12 +12,23 @@
   },
   "dependencies": {
     "@nuxt/content": "^3.11.0",
+    "@vueuse/core": "^14.1.0",
     "better-sqlite3": "^12.6.2",
     "nuxt": "^4.2.2",
+    "radix-vue": "^1.9.17",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^3.1.1"
+    "@nuxt/devtools": "^3.1.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/typography": "^0.5.19",
+    "autoprefixer": "^10.4.23",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.562.0",
+    "postcss": "^8.5.6",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18"
   }
 }
