--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -259,25 +259,23 @@ editor:
 # Register custom editor components
 # These will appear in the "+" menu when editing markdown fields
 editor_components:
-  - label: "📹 Video Embed (YouTube/Vimeo)"
+  - label: "YouTube Video"
+    id: "youtube-video"
+    pattern: /::youtube-video\{id="([^"]+)"(?:\s+title="([^"]*)")?\}/
+    fields:
+      - {label: "YouTube URL or Video ID", name: "id", widget: "string", hint: "Paste YouTube URL (e.g., https://youtube.com/watch?v=dQw4w9WgXcQ) or just the ID"}
+      - {label: "Title", name: "title", widget: "string", default: "Video Tutorial", required: false}
+    toBlock: "::youtube-video{id=\"{{id}}\" title=\"{{title}}\"}"
+    toPreview: "<div style=\"border: 2px solid #ff0000; padding: 16px; margin: 16px 0; border-radius: 8px;\"><div style=\"font-weight: bold; color: #ff0000; margin-bottom: 8px;\">🎥 YouTube Video</div><div style=\"background: #000; aspect-ratio: 16/9; border-radius: 4px; display: flex; align-items: center; justify-content: center; color: #fff;\"><iframe src=\"https://www.youtube.com/embed/{{id}}\" style=\"width: 100%; height: 100%; border: none;\" allowfullscreen></iframe></div><div style=\"font-size: 12px; color: #666; margin-top: 8px;\">{{title}}</div></div>"
+
+  - label: "Video Embed"
     id: "iframe-component"
-    pattern: /^::iframe-component\{src="([^"]+)"(?:\s+title="([^"]*)")?(?:\s+width="([^"]*)")?(?:\s+height="([^"]*)"))?\}$/
+    pattern: /::iframe-component\{src="([^"]+)"(?:\s+title="([^"]*)")?\}/
     fields:
       - {label: "Video URL", name: "src", widget: "string", hint: "Full YouTube or Vimeo URL"}
       - {label: "Title", name: "title", widget: "string", default: "Video Tutorial"}
-      - {label: "Width", name: "width", widget: "string", default: "100%", required: false}
-      - {label: "Height", name: "height", widget: "string", default: "600", required: false}
-    toBlock: |
-      ::iframe-component{src="{{src}}" title="{{title}}" width="{{width}}" height="{{height}}"}
-    toPreview: |
-      <div style="border: 2px solid #4a90e2; padding: 16px; margin: 16px 0; border-radius: 8px; background: #f0f7ff;">
-        <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 8px;">
-          <span style="font-size: 24px;">📹</span>
-          <strong style="color: #4a90e2;">Video Embed</strong>
-        </div>
-        <div style="color: #333; margin-top: 8px;"><strong>{{title}}</strong></div>
-        <div style="color: #666; font-size: 12px; margin-top: 4px;">{{src}}</div>
-      </div>
+    toBlock: "::iframe-component{src=\"{{src}}\" title=\"{{title}}\"}"
+    toPreview: "<div style=\"border: 2px solid #4a90e2; padding: 16px; margin: 16px 0; border-radius: 8px;\"><div style=\"font-weight: bold; color: #4a90e2;\">📹 Video Embed: {{title}}</div><div style=\"font-size: 12px; color: #666; margin-top: 4px;\">{{src}}</div></div>"
 
   - label: "📊 Google Slides Presentation"
     id: "google-slides-component"
