--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -6,6 +6,9 @@ backend:
 # Uncomment below for local testing
 # local_backend: true
 
+# Enable editorial workflow (Draft -> In Review -> Ready)
+publish_mode: editorial_workflow
+
 media_folder: "public/uploads" # Media files will be stored in the repo under public/uploads
 public_folder: "/uploads" # The src attribute for uploaded media will begin with /uploads
 
