--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "migrate:test": "node scripts/migrate-test.js"
   },
   "dependencies": {
+    "@google/model-viewer": "^4.1.0",
     "@nuxt/content": "^3.11.0",
     "@nuxt/image": "^2.0.0",
     "@vueuse/core": "^14.1.0",
