feat: add resources management and loading functionality
- Implemented a new resources collection in the admin config with fields for name, description, body, type, tags, URL, and alt text.
- Created a JSON file to store resources data, including various artists, assets, references, and collectives.
- Developed a new resources page with filtering capabilities based on search queries, types, and tags.
- Added loading indicators for asynchronous data fetching in lectures, pathways, projects, rubrics, specializations, and tutorials pages.
- Introduced a script to convert CSV data into the resources JSON format for easier management.
- Implemented an API endpoint to serve the resources data.

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -304,6 +304,22 @@ collections:
           - {label: "Name", name: "name", widget: "string"}
           - {label: "Description", name: "description", widget: "text"}
 
+  - name: "resources"
+    label: "Resources"
+    file: "content/data/resources.json"
+    fields:
+      - label: "Resources"
+        name: "body"
+        widget: "list"
+        fields:
+          - {label: "Name", name: "name", widget: "string"}
+          - {label: "Description", name: "description", widget: "text", required: false}
+          - {label: "Body", name: "body", widget: "text", required: false, hint: "Additional details"}
+          - {label: "Type", name: "type", widget: "select", options: ["artist", "assets", "reference", "collective", "tool", "tutorial", "other"]}
+          - {label: "Tags", name: "tags", widget: "list", required: false, hint: "Add relevant tags (e.g., textures, lighting, modeling)"}
+          - {label: "URL", name: "url", widget: "string"}
+          - {label: "Alt Text", name: "alt", widget: "string", required: false, hint: "Defaults to name if not provided"}
+
 # Editor configuration
 editor:
   preview: true
