updated field config

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -319,7 +319,13 @@ collections:
               - {label: "Description", name: "description", widget: "text", required: false}
               - {label: "Body", name: "body", widget: "text", required: false, hint: "Additional details"}
               - {label: "Type", name: "type", widget: "select", options: ["artist", "assets", "reference", "collective", "tool", "tutorial", "other"]}
-              - {label: "Tags", name: "tags", widget: "list", required: false, hint: "Add relevant tags (e.g., textures, lighting, modeling)"}
+              - label: "Tags"
+                name: "tags"
+                widget: "list"
+                required: false
+                allow_add: true
+                hint: "Add tags one at a time. Each tag can contain spaces (e.g., '3d animation', 'procedural modeling'). Click 'Add tags' to add each new tag."
+                field: {label: "Tag", name: "tag", widget: "string"}
               - {label: "URL", name: "url", widget: "string"}
               - {label: "Alt Text", name: "alt", widget: "string", required: false, hint: "Defaults to name if not provided"}
 
