--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxt/image": "^2.0.0",
     "@vueuse/core": "^14.1.0",
     "better-sqlite3": "^12.6.2",
+    "jszip": "^3.10.1",
     "nuxt": "^4.2.2",
     "radix-vue": "^1.9.17",
     "vue": "^3.5.13",
