feat: implement content versioning system with multi-layer protection
- Add version-resolver utility for handling version queries
- Create snapshot creation script for immutable archives
- Update embed routes to support version parameters (?version=1.0.0)
- Add version fields to content schema (version, versionStatus, changelog, publishEmbed)
- Implement 5-layer protection system:
  1. Decap CMS UI exclusion (hides v*.md files)
  2. Pre-commit hook (interactive warning)
  3. GitHub PR validation workflow
  4. CODEOWNERS (requires admin approval)
  5. Integrity validation script
- Add comprehensive documentation (VERSIONING_SYSTEM.md)
- Create PR template with version edit warnings
- Add test exercise with version metadata (animated-textures v1.0.0)
- Install Husky for git hooks

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,3 +6,19 @@
 
 # Specific collections (optional - can add more granular rules)
 /content/** @michael-collins
+
+# CRITICAL: Versioned/archived content files require extra scrutiny
+# These are immutable snapshots that users may be embedding
+content/exercises/**/v*.md @michael-collins
+content/tutorials/**/v*.md @michael-collins
+content/lectures/**/v*.md @michael-collins
+content/articles/**/v*.md @michael-collins
+content/projects/**/v*.md @michael-collins
+
+# Version registry requires admin review
+content/data/*-versions.json @michael-collins
+
+# Version management scripts require admin review
+scripts/create-version-snapshot.js @michael-collins
+scripts/check-version-edits.js @michael-collins
+scripts/validate-version-integrity.js @michael-collins
