--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -18,6 +18,8 @@ collections:
     folder: "content/articles" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    # Exclude version snapshot files from CMS UI to prevent accidental edits
+    exclude: "**/v[0-9]*.md"
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Description", name: "description", widget: "text"}
@@ -42,6 +44,8 @@ collections:
     folder: "content/tutorials" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    # Exclude version snapshot files from CMS UI to prevent accidental edits
+    exclude: "**/v[0-9]*.md"
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Description", name: "description", widget: "text"}
@@ -67,6 +71,9 @@ collections:
     folder: "content/exercises"
     create: true
     slug: "{{slug}}"
+    # Exclude version snapshot files from CMS UI to prevent accidental edits
+    filter: {field: "draft", value: false}
+    exclude: "**/v[0-9]*.md"
     view_filters:
       - label: "Published"
         field: published
