chore: streamline Node.js setup and dependency installation in version validation workflow

--- a/.github/workflows/validate-version-edits.yml
+++ b/.github/workflows/validate-version-edits.yml
@@ -19,6 +19,14 @@ jobs:
         with:
           fetch-depth: 0  # Get full history to compare
       
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      
+      - name: Install dependencies
+        run: npm ci
+      
       - name: Get changed files
         id: changed-files
         run: |
@@ -143,6 +151,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+      
+      - name: Install dependencies
+        run: npm ci
       
       - name: Validate version file integrity
         run: |
