--- a/.github/workflows/validate-version-edits.yml
+++ b/.github/workflows/validate-version-edits.yml
@@ -10,6 +10,10 @@ on:
       - 'content/articles/**/v*.md'
       - 'content/projects/**/v*.md'
 
+permissions:
+  pull-requests: write
+  issues: write
+
 jobs:
   check-version-edits:
     runs-on: ubuntu-latest
