fix: ensure warning banner is added correctly for archived version files in PR body

--- a/.github/workflows/validate-version-edits.yml
+++ b/.github/workflows/validate-version-edits.yml
@@ -130,7 +130,7 @@ jobs:
             ---`;
             
             // Only add banner if not already present
-            if (!pr.body.includes('AUTOMATED WARNING: Archived Version Files Modified')) {
+            if (!(pr.body || '').includes('AUTOMATED WARNING: Archived Version Files Modified')) {
               await github.rest.pulls.update({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
