--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -18,6 +18,7 @@ collections:
     folder: "content/articles" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    path: "{{slug}}/index" # Files are stored as {slug}/index.md
     # Exclude version snapshot files from CMS UI to prevent accidental edits
     exclude: "**/v[0-9]*.md"
     fields: # The fields for each document, usually in front matter
@@ -44,6 +45,7 @@ collections:
     folder: "content/tutorials" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    path: "{{slug}}/index" # Files are stored as {slug}/index.md
     # Exclude version snapshot files from CMS UI to prevent accidental edits
     exclude: "**/v[0-9]*.md"
     fields: # The fields for each document, usually in front matter
@@ -71,6 +73,7 @@ collections:
     folder: "content/exercises"
     create: true
     slug: "{{slug}}"
+    path: "{{slug}}/index" # Files are stored as {slug}/index.md
     # Exclude version snapshot files from CMS UI to prevent accidental edits
     filter: {field: "draft", value: false}
     exclude: "**/v[0-9]*.md"
@@ -120,6 +123,7 @@ collections:
     folder: "content/projects"
     create: true
     slug: "{{slug}}"
+    path: "{{slug}}/index" # Files are stored as {slug}/index.md
     # Exclude version snapshot files from CMS UI to prevent accidental edits
     exclude: "**/v[0-9]*.md"
     view_filters:
@@ -178,6 +182,7 @@ collections:
     folder: "content/specializations"
     create: true
     slug: "{{slug}}"
+    path: "{{slug}}/index" # Files are stored as {slug}/index.md
     view_filters:
       - label: "Published"
         field: published
@@ -231,6 +236,7 @@ collections:
     folder: "content/pathways"
     create: true
     slug: "{{slug}}"
+    path: "{{slug}}/index" # Files are stored as {slug}/index.md
     view_filters:
       - label: "Published"
         field: published
@@ -279,6 +285,7 @@ collections:
     folder: "content/lectures"
     create: true
     slug: "{{slug}}"
+    path: "{{slug}}/index" # Files are stored as {slug}/index.md
     # Exclude version snapshot files from CMS UI to prevent accidental edits
     exclude: "**/v[0-9]*.md"
     view_filters:
@@ -335,6 +342,7 @@ collections:
     folder: "content/lessons"
     create: true
     slug: "{{slug}}"
+    path: "{{slug}}/index" # Files are stored as {slug}/index.md
     # Exclude version snapshot files from CMS UI to prevent accidental edits
     exclude: "**/v[0-9]*.md"
     view_filters:
