refactor: move version files to v/ subdirectory
- Updated all version-related code to use v/ subdirectory structure
- Version files now stored as: content/{type}/{slug}/v/{version}.md
- Updated create-version-snapshot.js to create v/ folders
- Updated version-resolver.ts to query v/ subdirectory
- Updated useContentVersions composable for v/ structure
- Updated Husky pre-commit hook pattern
- Updated GitHub Actions workflows for v/ pattern
- Moved all existing version files to v/ subdirectories
- This prevents version files from appearing in DecapCMS

--- a/.github/workflows/auto-create-versions.yml
+++ b/.github/workflows/auto-create-versions.yml
@@ -91,7 +91,7 @@ jobs:
       - name: Check for new version files
         id: check-versions
         run: |
-          if git status --porcelain | grep -E '^.*v[0-9]+\.[0-9]+\.[0-9]+\.md$' > /dev/null; then
+          if git status --porcelain | grep -E '^.*v/[0-9]+\.[0-9]+\.[0-9]+\.md$' > /dev/null; then
             echo "has-versions=true" >> $GITHUB_OUTPUT
             echo "Version files detected:"
             git status --porcelain
@@ -106,7 +106,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
-          git add 'content/**/v[0-9]*.md'
+          git add 'content/**/v/*.md'
           git add 'content/data/version-registry.json'
           
           git commit -m "chore: auto-create content version snapshots [skip ci]"
