--- a/.github/workflows/auto-create-versions.yml
+++ b/.github/workflows/auto-create-versions.yml
@@ -70,6 +70,7 @@ jobs:
     
     permissions:
       contents: write
+      pull-requests: write
     
     steps:
       - name: Checkout code
@@ -100,25 +101,61 @@ jobs:
             echo "No new version files created"
           fi
 
-      - name: Commit version snapshots
+      - name: Commit and push version snapshots
         if: steps.check-versions.outputs.has-versions == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
+          # Create a unique branch name
+          BRANCH="auto/version-snapshots-$(date +%s)"
+          echo "branch=$BRANCH" >> $GITHUB_ENV
+          
+          # Create and checkout new branch
+          git checkout -b "$BRANCH"
+          
+          # Add and commit version files
           git add 'content/**/v/*.md'
           git add 'content/data/version-registry.json'
           
           git commit -m "chore: auto-create content version snapshots [skip ci]"
-          git push
+          
+          # Push to new branch
+          git push origin "$BRANCH"
+
+      - name: Create pull request
+        if: steps.check-versions.outputs.has-versions == 'true'
+        run: |
+          gh pr create \
+            --base main \
+            --head "${{ env.branch }}" \
+            --title "chore: auto-create content version snapshots" \
+            --body "🤖 Automated version snapshot creation
+
+This PR was automatically created after merging PR #${{ github.event.pull_request.number }}.
+
+## Changes
+- Created new version snapshot files for content with bumped version numbers
+- Updated version registry
+
+## Version Files Created
+$(git diff origin/main --name-only | grep -E 'v/[0-9]+\.[0-9]+\.[0-9]+\.md$' | sed 's/^/- /')
+
+**Note:** This PR can be safely merged. Version files are immutable snapshots."
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create summary
         if: always()
         run: |
           echo "## Version Snapshot Summary" >> $GITHUB_STEP_SUMMARY
           if [ "${{ steps.check-versions.outputs.has-versions }}" = "true" ]; then
-            echo "✓ New version files created and committed" >> $GITHUB_STEP_SUMMARY
-            git diff HEAD~1 --name-only | grep -E 'v[0-9]+\.[0-9]+\.[0-9]+\.md$' | sed 's/^/- /' >> $GITHUB_STEP_SUMMARY
+            echo "✓ Pull request created with new version files" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "**Branch:** \`${{ env.branch }}\`" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "**Files created:**" >> $GITHUB_STEP_SUMMARY
+            git diff origin/main --name-only | grep -E 'v/[0-9]+\.[0-9]+\.[0-9]+\.md$' | sed 's/^/- /' >> $GITHUB_STEP_SUMMARY || echo "- (checking...)" >> $GITHUB_STEP_SUMMARY
           else
             echo "ℹ No version bumps detected - no new version files created" >> $GITHUB_STEP_SUMMARY
           fi
