fix: use WORKFLOW_PAT secret for PR creation
- Changed from secrets.GITHUB_TOKEN to secrets.WORKFLOW_PAT
- WORKFLOW_PAT has necessary permissions for creating pull requests
- Resolves permission denied error when creating PRs

--- a/.github/workflows/auto-create-versions.yml
+++ b/.github/workflows/auto-create-versions.yml
@@ -146,7 +146,7 @@ jobs:
             --title "chore: auto-create content version snapshots" \
             --body "$PR_BODY"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.WORKFLOW_PAT }}
 
       - name: Create summary
         if: always()
